--- a/app/styles/components/form/_form.scss
+++ b/app/styles/components/form/_form.scss
@@ -1,6 +1,9 @@
 .form {
-  font-size: 3rem;
+  font-size: 1.5rem;
   text-transform: uppercase;
+  @media screen and (min-width: $medium-screen) {
+    font-size: 2rem;
+  }
   &__label {
     display: block;
     color: $color-white;
@@ -8,16 +11,19 @@
   &__input {
     display: block;
     width: 100%;
-    height: 65px;
+    height: 35px;
     padding: 0 2rem;
     color: $color-white;
     font-weight: 300;
     background-color: $color-primary-bg-light;
     outline: none;
     border: none;
+    @media screen and (min-width: $medium-screen) {
+      height: 65px;
+    }
   }
   &__message {
-    min-height: 24rem;
+    min-height: 15rem;
     height: auto;
     width: 100%;
     resize: none;
@@ -28,6 +34,9 @@
     outline: none;
     border: none;
     font-weight: 300;
+    @media screen and (min-width: $medium-screen) {
+      min-height: 24rem;
+    }
   }
   &__action {
     margin: 1rem 0;
