--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -16,7 +16,10 @@ html {
 }
 body {
   font-family: "Alegreya Sans", sans-serif;
-  padding: 1rem;
+  padding: 0.5rem;
+  @media screen and (min-width: 800px) {
+    padding: 1rem;
+  }
 }
 
 @import "abstracts/color";
