--- a/app/styles/pages/_home.scss
+++ b/app/styles/pages/_home.scss
@@ -1,7 +1,8 @@
 .section-about {
   background-color: $color-default-bg;
   background-repeat: no-repeat;
-  padding: 2.5rem 3rem;
+  padding: 2.5rem 1.5rem;
+  margin-top: -1rem;
   @media screen and (min-width: $medium-screen) {
     padding: 6.5rem 0;
   }
@@ -9,7 +10,7 @@
 
 .section-skills {
   background-color: $color-default-bg;
-  padding: 5.5rem 3rem;
+  padding: 5.5rem 1.2rem;
 
   background-image: linear-gradient(
       to left,
@@ -56,7 +57,7 @@
     display: flex;
     flex-direction: column;
     & > p {
-      font-size: 2rem;
+      font-size: 1.5rem;
       color: $color-white;
     }
   }
