--- a/app/styles/typography/_typography.scss
+++ b/app/styles/typography/_typography.scss
@@ -12,28 +12,30 @@ h6 {
   text-transform: uppercase;
   backface-visibility: hidden;
   &__title {
-    font-size: 3rem;
+    font-size: 2rem;
     align-self: center;
-    letter-spacing: 1rem;
+    letter-spacing: 0.5rem;
     @media screen and (min-width: $medium-screen) {
       font-size: 6rem;
+      letter-spacing: 1rem;
     }
   }
   &__sub-title {
     display: inline-block;
-    width: 80%;
-    font-size: 1.5rem;
+    width: 95%;
+    font-size: 1rem;
     align-self: center;
     letter-spacing: 0.4rem;
     @media screen and (min-width: $medium-screen) {
       font-size: 3rem;
       letter-spacing: 0.5rem;
+      width: 80%;
     }
   }
 }
 
 .heading-secondary {
-  font-size: 3rem;
+  font-size: 2rem;
   text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
@@ -47,7 +49,7 @@ h6 {
   }
 
   &__sub-title {
-    font-size: 2rem;
+    font-size: 1rem;
     display: block;
     text-transform: uppercase;
     color: $color-white;
@@ -63,16 +65,19 @@ h6 {
 }
 
 .heading-sub {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 500;
   text-transform: uppercase;
   color: $color-white;
   padding: 0 1rem;
+  @media screen and (min-width: $medium-screen) {
+    font-size: 2.5rem;
+  }
 }
 
 // buttons typography
 .btn {
-  font-size: 1.5rem;
+  font-size: 1rem;
   letter-spacing: 0.5rem;
   @media screen and (min-width: $medium-screen) {
     font-size: 2.5rem;
@@ -81,15 +86,14 @@ h6 {
 
 // paragraph typography
 .paragraph {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 300;
   color: $color-white;
   text-align: left;
   padding: 0 1rem;
-  line-height: 4.04rem;
   @media screen and (min-width: $medium-screen) {
-    padding: 0 1rem;
     font-size: 2.5rem;
+    line-height: 4.04rem;
   }
   & > strong {
     font-weight: 500;
